--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: InventoryWizard
-version: 1.1.0
+version: 1.1.1
 main: com.inventorywizard.InventoryWizardPlugin
 api-version: "1.21"
 description: Magically sort chests and inventories with H2 database performance and cycling sorting modes
@@ -23,8 +23,9 @@ permissions:
     description: Allows sorting everything at once
     default: true
   inventorywizard.admin:
-    description: Allows viewing database information and admin features
+    description: Allows admin functions like regenerating database credentials
     default: op
+
 
 commands:
   iwiz:
